@@ -45,13 +45,13 @@
         }
         @font-face {
             font-family: 'test4';
-            src: local('Courier');
+            src: local('Courier'), local('Courier New');
             unicode-range: U+004F-0051;
         }
 
         @font-face {
             font-family: 'test5';
-            src: local('Times');
+            src: local('Times'), local('Times New Roman');
         }
         @font-face {
             font-family: 'test5';
@@ -60,7 +60,7 @@
         }
         @font-face {
             font-family: 'test5';
-            src: local('Courier');
+            src: local('Courier'), local('Courier New');
             unicode-range: U+0052-0055;
         }
     </style>
